tests/ui/wf/hir-wf-check-erase-regions.stderr
error[E0277]: `&'a T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:7:21
   |
LL |     type IntoIter = std::iter::Flatten<std::slice::Iter<'a, T>>;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&'a T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&'a T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&'a T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL

error[E0277]: `&'a T` is not an iterator
  --> $DIR/hir-wf-check-erase-regions.rs:10:27
   |
LL |     fn into_iter(self) -> Self::IntoIter {
   |                           ^^^^^^^^^^^^^^ `&'a T` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `&'a T`
   = help: the trait `Iterator` is implemented for `&mut I`
   = note: required for `&'a T` to implement `IntoIterator`
note: required by a bound in `Flatten`
  --> $SRC_DIR/core/src/iter/adapters/flatten.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
